--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,4 +70,10 @@
     <string name="sign_up_user_type">Je suis</string>
     <string name="sign_up_success">"Inscription réussie</string>
     <string name="sign_up_incorrect_input">Attention tous vos champs ne sont pas valides</string>
+
+    <!-- HomeScreen  -->
+    <string name="home_screen_club">Club</string>
+    <string name="home_screen_sportif">Sportif</string>
+    <string name="home_screen_connected_as">Vous etes connecté en tant que %1$s</string>
+
 </resources>
