--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,8 +26,6 @@
         <item>Sportif</item>
     </string-array>
 
-    <!-- Type de poste -->
-    <string-array name="poste">
     <!-- Type de poste football-->
     <string-array name="posteFootball">
         <item>Attaquant</item>
@@ -107,9 +105,12 @@
     <string name="profil_picture">Photo de profil</string>
     <string name="update_success">Mise à jour du profil effectuée</string>
     <string name="update_faile">Un probleme est survenu pendant la mise à jour du profil</string>
+
+    <!-- Club -->
     <string name="teamName">Nom d\'équipe</string>
-    <string name="rechercheActive">Recherche active</string>
     <string name="addTeam">Ajouter une équipe</string>
+    <string name="rechercheActive">Recherche active</string>
+    <string name="addTeamResult">Ajouter une année à votre historique</string>
 
     <!-- Generic -->
     <string name="valider">Valider</string>
