--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -111,6 +111,10 @@
     <string name="addTeam">Ajouter une équipe</string>
     <string name="rechercheActive">Recherche active</string>
     <string name="addTeamResult">Ajouter une année à votre historique</string>
+    <string name="clubName">Nom du club</string>
+    <string name="year">Année</string>
+    <string name="level">Niveau</string>
+    <string name="rank">Classement</string>
 
     <!-- Generic -->
     <string name="valider">Valider</string>
